[tool.poetry]
name = "infinitgraph-backend"
version = "0.1.0"
description = "Infinitgraph Backend Developer Test"
authors = ["averroes96 <addavigner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.105.0"
uvicorn = "0.24.0"
pydantic = {version = "2.5.2", extras = ["email"]}
pydantic-settings = "2.1.0"
python-jose = "3.3.0"
passlib = "1.7.4"
bcrypt = "4.0.1"
httpx = "0.25.2"
faker = "20.1.0"
fastapi-pagination = "0.12.12"
python-multipart = "0.0.6"
PyJWT = "^2.8.0"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
